Adding entity spawn inside the differents expeditions