@@ -3,6 +3,7 @@ package com.EreliaStudio.OneBlock;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -21,25 +22,53 @@ public final class OneBlockExpeditionDefaults
         }
     }
 
+    public static final class CompletionRewardDefinition
+    {
+        public final String dropId;
+        public final int quantity;
+
+        public CompletionRewardDefinition(String dropId, int quantity)
+        {
+            this.dropId = dropId;
+            this.quantity = Math.max(1, quantity);
+        }
+    }
+
     public static final class ExpeditionDefinition
     {
         public final String expeditionId;
         public final String blockId;
         public final int ticks;
         public final List<DropDefinition> drops;
+        public final List<CompletionRewardDefinition> completionRewards;
 
         public ExpeditionDefinition(String expeditionId, String blockId, int ticks, List<DropDefinition> drops)
+        {
+            this(expeditionId, blockId, ticks, drops, List.of());
+        }
+
+        public ExpeditionDefinition(String expeditionId,
+                                    String blockId,
+                                    int ticks,
+                                    List<DropDefinition> drops,
+                                    List<CompletionRewardDefinition> completionRewards)
         {
             this.expeditionId = expeditionId;
             this.blockId = blockId;
             this.ticks = ticks;
-            this.drops = Collections.unmodifiableList(new ArrayList<>(drops));
+            this.drops = drops == null || drops.isEmpty()
+                    ? List.of()
+                    : Collections.unmodifiableList(new ArrayList<>(drops));
+            this.completionRewards = completionRewards == null || completionRewards.isEmpty()
+                    ? List.of()
+                    : Collections.unmodifiableList(new ArrayList<>(completionRewards));
         }
     }
 
     private static final Map<String, ExpeditionDefinition> EXPEDITIONS;
     private static final Map<String, List<String>> DEFAULT_IDS;
     private static final Map<String, Map<String, Integer>> DEFAULT_WEIGHTS;
+    private static final Set<String> COMPLETION_REWARD_DROP_IDS;
 
     static
     {
@@ -53,31 +82,48 @@ public final class OneBlockExpeditionDefaults
 
         register(expeditions, "Meadow_Cave", 25, List.of(
                 drop("Rubble_Stone", 20),
-                drop("Rock_Stone", 20)
+                drop("Rock_Stone", 20),
+                drop(OneBlockDropId.entityDropId("Rat"), 3)
         ));
 
         register(expeditions, "Meadow_Forest", 25, List.of(
                 drop("Ingredient_Stick", 20),
                 drop("Wood_Oak_Trunk", 10),
-                drop("Plant_Sapling_Oak", 1)
+                drop("Plant_Sapling_Oak", 1),
+                drop(OneBlockDropId.entityDropId("Rabbit"), 2)
         ));
 
         register(expeditions, "Cave_Entry", 25, List.of(
                 drop("Rubble_Stone", 20),
                 drop("Rock_Stone", 10),
-                drop("Ore_Copper", 6)
+                drop("Ore_Copper", 6),
+                drop(OneBlockDropId.entityDropId("Rat"), 3),
+                drop(OneBlockDropId.entityDropId("Goblin_Miner"), 2)
         ));
 
-        register(expeditions, "Quarry", 150, List.of(
+        register(expeditions, "Quarry", 50, List.of(
                 drop("Rock_Stone", 10),
                 drop("Soil_Dirt", 6),
-                drop("Rock_Stone_Mossy", 1)
+                drop("Rock_Stone_Mossy", 1),
+                drop(OneBlockDropId.entityDropId("Rat"), 3)
         ));
 
         register(expeditions, "Cave", 25, List.of(
                 drop("Rock_Stone", 15),
                 drop("Ore_Copper", 10),
-                drop("Ore_Iron", 3)
+                drop("Ore_Iron", 6),
+                drop(OneBlockDropId.entityDropId("Rat"), 3),
+                drop(OneBlockDropId.entityDropId("Goblin_Miner"), 5)
+        ));
+
+        register(expeditions, "Gobelin_Dungeon", 6, List.of(
+                drop("Goblin_Miner", 10),
+                drop("Goblin_Thief", 2),
+                drop("Goblin_Scrapper", 10)
+        ), List.of(
+                reward("Ingredient_Life_Essence", 10),
+                reward("Ore_Iron", 12),
+                reward("Ingredient_Charcoal", 20)
         ));
 
         register(expeditions, "Forest", 25, List.of(
@@ -89,10 +135,12 @@ public final class OneBlockExpeditionDefaults
                 drop("Plant_Sapling_Birch", 2),
                 drop("Plant_Crop_Mushroom_Common_Brown", 5),
                 drop("Plant_Crop_Mushroom_Cap_Brown", 5),
-                drop("Ingredient_Life_Essence", 5)
+                drop("Ingredient_Life_Essence", 5),
+                drop(OneBlockDropId.entityDropId("Chicken"), 2),
+                drop(OneBlockDropId.entityDropId("Boar"), 2)
         ));
 
-        register(expeditions, "Fairy_pond", 200, List.of(
+        register(expeditions, "Fairy_pond", 50, List.of(
                 drop("Plant_Crop_Mushroom_Glowing_Blue", 10),
                 drop("Plant_Crop_Mushroom_Glowing_Purple", 10),
                 drop("Plant_Fruit_Azure", 3),
@@ -105,6 +153,7 @@ public final class OneBlockExpeditionDefaults
         EXPEDITIONS = Collections.unmodifiableMap(expeditions);
         DEFAULT_IDS = buildDefaultIds(EXPEDITIONS);
         DEFAULT_WEIGHTS = buildDefaultWeights(EXPEDITIONS);
+        COMPLETION_REWARD_DROP_IDS = buildCompletionRewardDropIds(EXPEDITIONS);
     }
 
     private OneBlockExpeditionDefaults() {}
@@ -136,6 +185,17 @@ public final class OneBlockExpeditionDefaults
         return EXPEDITIONS.keySet();
     }
 
+    public static List<CompletionRewardDefinition> getCompletionRewards(String expeditionId)
+    {
+        ExpeditionDefinition def = EXPEDITIONS.get(expeditionId);
+        return def == null ? List.of() : def.completionRewards;
+    }
+
+    public static Set<String> getCompletionRewardDropIds()
+    {
+        return COMPLETION_REWARD_DROP_IDS;
+    }
+
     public static String getBlockId(String expeditionId)
     {
         ExpeditionDefinition def = EXPEDITIONS.get(expeditionId);
@@ -153,10 +213,24 @@ public final class OneBlockExpeditionDefaults
         return new DropDefinition(dropId, Math.max(1, weight));
     }
 
+    private static CompletionRewardDefinition reward(String dropId, int quantity)
+    {
+        return new CompletionRewardDefinition(dropId, quantity);
+    }
+
     private static void register(Map<String, ExpeditionDefinition> map, String expeditionId, int ticks, List<DropDefinition> drops)
     {
+        register(map, expeditionId, ticks, drops, List.of());
+    }
+
+    private static void register(Map<String, ExpeditionDefinition> map,
+                                 String expeditionId,
+                                 int ticks,
+                                 List<DropDefinition> drops,
+                                 List<CompletionRewardDefinition> completionRewards)
+    {
         String blockId = "OneBlock_Block_" + expeditionId;
-        map.put(expeditionId, new ExpeditionDefinition(expeditionId, blockId, ticks, drops));
+        map.put(expeditionId, new ExpeditionDefinition(expeditionId, blockId, ticks, drops, completionRewards));
     }
 
     private static Map<String, List<String>> buildDefaultIds(Map<String, ExpeditionDefinition> expeditions)
@@ -188,5 +262,19 @@ public final class OneBlockExpeditionDefaults
             out.put(entry.getKey(), Collections.unmodifiableMap(weights));
         }
         return Collections.unmodifiableMap(out);
+    }
+
+    private static Set<String> buildCompletionRewardDropIds(Map<String, ExpeditionDefinition> expeditions)
+    {
+        Set<String> out = new HashSet<>();
+        for (ExpeditionDefinition expedition : expeditions.values())
+        {
+            for (CompletionRewardDefinition reward : expedition.completionRewards)
+            {
+                if (reward == null || reward.dropId == null || reward.dropId.isEmpty()) continue;
+                out.add(reward.dropId);
+            }
+        }
+        return Collections.unmodifiableSet(out);
     }
 }
